Working on Project

--- a/discussion.html
+++ b/discussion.html
@@ -83,7 +83,7 @@
       </article>
     </div>
     
-    <script src="../jsSMIT/app.js"></script>
+    <script src="./jsSMIT/app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
