--- a/question.html
+++ b/question.html
@@ -132,6 +132,6 @@
     <div id="showQuillText" class=""></div>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="../jsSMIT/question.js"></script>
+    <script type="module" src="./jsSMIT/question.js"></script>
   </body>
 </html>
