--- a/signUp.html
+++ b/signUp.html
@@ -69,7 +69,7 @@
         </form>
       </div>
     </div>
-    <script type="module" src="../jsSMIT/app.js"></script>
+    <script type="module" src="./jsSMIT/app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
