Blog Page Completed

--- a/blog.html
+++ b/blog.html
@@ -64,8 +64,8 @@
       </div>
     </div>
 
-    <!-- <ul id="postList"></ul> -->
-    <script type="module" src="../jsSMIT/blog.js"></script>
+    <ul id="postList"></ul>
+    <script type="module" src="./jsSMIT/blog.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
