Working on Discussion File

--- a/discussion.html
+++ b/discussion.html
@@ -55,35 +55,16 @@
         </div>
       </div>
     </div>
-    <div id="article">
-      <div id="blogPost">
-      <article class="prose">
-        <h2
-          class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight"
-        >
-          Back End Developer
-        </h2>
-        <p class="mt-6 text-xl leading-8 text-gray-700">
-          Aliquet nec orci mattis amet quisque ullamcorper neque, nibh sem. At
-          arcu, sit dui mi, nibh dui, diam eget aliquam. Quisque id at vitae
-          feugiat egestas.Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint
-        </p>
-        <p id="puslisherName" class="text-gray-900">Published By: hamza</p>
-        <p id="publishDate" class="text-gray-900">Date:01-Jan-2024</p>
-      </div>
-      <div id="replyBlogPost">
-        <h6 class="text-1xl font-bold leading-7 text-gray-900 sm:truncate sm:text-1xl sm:tracking-tight">Reply</h6>
-        <textarea id="textarea" class="textarea textarea-warning" placeholder="Bio"></textarea>
-        <button id="btnSubmitDiscussion" class="btn btn-outline btn-primary">Submit</button>
-      </article>
+  
+      <!-- <h1 id="postTitle"></h1>
+      <p id="postDescription"></p>
+      <div>
+        <p>Author: <span id="authorDisplayName"></span></p>
+        <p>Email: <span id="authorEmail"></span></p>
+      </div> -->
+
+      <script src="./jsSMIT/discussion.js"></script>
+      <script src="https://cdn.tailwindcss.com"></script>
     </div>
-    
-    <script src="./jsSMIT/app.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
