Working on Replies

--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
@@ -19,8 +20,7 @@
       </div>
       <div class="flex-none gap-2">
         <button
-          id=""
-          onclick="window.location.href = 'write.html'"
+          id="createBlogButton"
           class="inline-block cursor-pointer rounded-md bg-gray-800 px-4 py-3 text-center text-sm text-white transition duration-200 ease-in-out hover:bg-gray-900"
         >
           Ask Or Write
