--- a/question.html
+++ b/question.html
@@ -41,12 +41,6 @@
       </div>
 
       <div class="flex-none gap-2">
-        <button
-          id=""
-          class="inline-block cursor-pointer rounded-md bg-gray-800 px-4 py-3 text-center text-sm text-white transition duration-200 ease-in-out hover:bg-gray-900"
-        >
-          Ask Or Write
-        </button>
         <div class="form-control">
           <input
             type="text"
@@ -80,7 +74,7 @@
             </a>
           </li>
           <li><a>Settings</a></li>
-          <li><a id="Logout">Logout</a></li>
+          <li><a id="logoutBtn">Logout</a></li>
         </ul>
       </div>
     </div>
