--- a/discussion.html
+++ b/discussion.html
@@ -50,7 +50,7 @@
               </a>
             </li>
             <li><a>Settings</a></li>
-            <li><a>Logout</a></li>
+            <li id="logoutBtn"><a>Logout</a></li>
           </ul>
         </div>
       </div>
@@ -63,7 +63,7 @@
         <p>Email: <span id="authorEmail"></span></p>
       </div> -->
 
-      <script src="./jsSMIT/discussion.js"></script>
+      <script type="module" src="./jsSMIT/discussion.js"></script>
       <script src="https://cdn.tailwindcss.com"></script>
     </div>
   </body>
