Working on replies

--- a/discussion.html
+++ b/discussion.html
@@ -55,6 +55,8 @@
         </div>
       </div>
     </div>
+
+    <div id="repliesContainer"></div>
   
       <!-- <h1 id="postTitle"></h1>
       <p id="postDescription"></p>
