--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="../stylesSMIT/style.css" />
+    <link rel="stylesheet" href="./stylesSMIT/style.css" />
   </head>
   <body>
     <!-- Navbar -->
