--- a/discussion.html
+++ b/discussion.html
@@ -10,10 +10,10 @@
       type="text/css"
     />
 
-    <link rel="stylesheet" href="../stylesSMIT/style.css" />
+    <link rel="stylesheet" href="./stylesSMIT/style.css" />
     <title>discussion</title>
   </head>
-  <body>
+  <body style="height: 100vh; width: 100vw">
     <div class="navbar bg-base-100">
       <div class="flex-1">
         <a class="btn btn-ghost text-xl">daisyUI</a>
@@ -57,16 +57,15 @@
     </div>
 
     <div id="repliesContainer"></div>
-  
-      <!-- <h1 id="postTitle"></h1>
+
+    <!-- <h1 id="postTitle"></h1>
       <p id="postDescription"></p>
       <div>
         <p>Author: <span id="authorDisplayName"></span></p>
         <p>Email: <span id="authorEmail"></span></p>
       </div> -->
-
-      <script type="module" src="./jsSMIT/discussion.js"></script>
-      <script src="https://cdn.tailwindcss.com"></script>
-    </div>
+    <script type="module" src="./jsSMIT/discussion.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- </div> -->
   </body>
 </html>
