--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="../stylesSMIT/style.css" />
+    <link rel="stylesheet" href="./stylesSMIT/style.css" />
 
     <title>AskHubStack</title>
   </head>
