--- a/question.html
+++ b/question.html
@@ -12,7 +12,7 @@
       href="https://cdn.quilljs.com/1.3.6/quill.snow.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../stylesSMIT/style.css" />
+    <link rel="stylesheet" href="./stylesSMIT/style.css" />
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
     <title>Ask a Question</title>
