--- a/signUp.html
+++ b/signUp.html
@@ -20,7 +20,7 @@
         class="w-full p-6 bg-white border-t-4 border-gray-600 rounded-md shadow-md border-top lg:max-w-lg"
       >
         <h1 class="text-3xl font-semibold text-center text-gray-700">
-          Chat Pat
+          Ask Hub
         </h1>
         <form class="space-y-4">
           <div>
